# spin-wheel

./: README.md  pyproject.toml
backend/: docker-compose-deployment.yaml  docker-compose.yaml  pyproject.toml
backend/myspinwheelservice/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml  start.sh
backend/myspinwheelservice/myspinwheelapp/: admin.py  apps.py  exceptions.py  models.py  serializers.py  urls.py  views.py
backend/myspinwheelservice/myspinwheelapp/migrations/: 0001_initial.py  0002_testmodel.py  0003_delete_testmodel.py
backend/myspinwheelservice/myspinwheelservice/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.module.css
frontend/src/components/: Bottom.js  Bottom.module.css  BottomComponent.js  BottomSection.js  BottomSection.module.css  Footer.js  Footer.module.css  GlobalVotes.js  GlobalVotes.module.css  Header.js  Header.module.css  SpinWheel.js  SpinWheel.module.css  UserVotes.js  UserVotes.module.css  Wheel.js  Wheel.module.css  WinnerModal.js  WinnerModal.module.css
spin-wheel-service/: Dockerfile  README.md  manage.py  pyproject.toml
spin-wheel-service/spinwheelservice/: asgi.py  settings.py  urls.py  wsgi.py
