[project]
name = "spin-wheel-service"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kirtimanmishra", email = "mishrakirtiman24@gmail.com"},
]
dependencies = [
    "django>=5.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
runserver = "python manage.py runserver"
migrate = "python manage.py migrate"


[tool.pdm]
distribution = true
readme = "README.md"
